services/music/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          command:
            - sh
            - /entrypoint/exec.sh
          securityContext:
            privileged: true
          ports:
            - containerPort: 4533
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: "2Gi"
          volumeMounts:
          - name: config
            mountPath: /data
          - name: entrypoint
            mountPath: /entrypoint
      volumes:
        - name: entrypoint
          configMap:
            name: entrypoint
        - name: config
          persistentVolumeClaim:
            claimName: airsonic-config
