services/music/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  selector:
    app: navidrome
  type: LoadBalancer
  ports:
    - name: http
      port: 4533
      protocol: TCP
