services/music/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - music.takutakahashi.dev
    secretName: music-tls-secret
  rules:
  - host: music.takutakahashi.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: navidrome
            port:
              number: 4533
